--- a/webapp/backend/app/templates/profile.html
+++ b/webapp/backend/app/templates/profile.html
@@ -68,13 +68,13 @@
                                 <label class="col-md-12">团队名称</label>
                                 <div class="col-md-12">
                                     <input type="text" placeholder="软件学院志愿团队"
-                                        class="form-control form-control-line" value={{team.teamName}}>
+                                        class="form-control form-control-line" name="teamName" value={{team.teamName}}>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="example-email" class="col-md-12">负责人邮箱</label>
                                 <div class="col-md-12">
-                                    <input type="email" placeholder="hannagover@gmail.com" value={{team.email}}
+                                    <input type="email" placeholder="hannagover@gmail.com" value={{team.email}} name='email'
                                         class="form-control form-control-line" name="example-email"
                                         id="example-email">
                                 </div>
@@ -82,14 +82,14 @@
                             <div class="form-group">
                                 <label class="col-md-12">负责人电话</label>
                                 <div class="col-md-12">
-                                    <input type="text" placeholder="12345647890" value={{team.phone}} class="form-control form-control-line">
+                                    <input type="text" placeholder="12345647890" value={{team.phone}} name="phone" class="form-control form-control-line">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-12">密码</label>
                                 <div class="col-md-12">
                                     <input type="password" value="team.password"
-                                        class="form-control form-control-line">
+                                        class="form-control form-control-line" name="password">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -103,7 +103,7 @@
                                 <label class="col-md-12">团队简介</label>
                                 <div class="col-md-12">
                                     <textarea rows="5" placeholder="这里是XXXX，我们是一个XXXXXXXXXXXXXXXXXXXXX的团队，我们运营的项目包括XXXXXXXX。"  value={{team.description}}
-                                    class="form-control form-control-line">
+                                    class="form-control form-control-line" name="description">
 
                                     </textarea>
                                 </div>
