--- a/webapp/backend/app/templates/myactivity.html
+++ b/webapp/backend/app/templates/myactivity.html
@@ -68,7 +68,7 @@
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="card">
-                                                <img src="../static/img/myactivity/thu2.jpeg" class="card-img-top"
+                                                <img src="{{activity.thumb}}" class="card-img-top"
                                                     alt="...">
                                                 <div class="card-body">
                                                     <h5 class="card-title">项目简介</h5>
@@ -351,7 +351,7 @@
                                             <div class="card mb-3" style="max-width: 450px;">
                                                 <div class="row no-gutters">
                                                     <div class="col-md-4">
-                                                        <img src="../static/img/myactivity/thu2.jpeg"
+                                                        <img src="{{activity.thumb}}"
                                                             class="d-block w-100" alt="...">
                                                     </div>
                                                     <div class="col-md-8">
