--- a/webapp/backend/app/templates/base.html
+++ b/webapp/backend/app/templates/base.html
@@ -51,7 +51,7 @@
                     <!-- Logo -->
                     <!-- ============================================================== -->
                     <div class="navbar-brand">
-                        <a href="profile" class="logo">
+                        <a href="/" class="logo">
                             <!-- Logo icon -->
                             <b class="logo-icon">
                                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
@@ -117,7 +117,7 @@
                                     src="../static/img/myactivity/users/1.jpg" alt="user" class="rounded-circle"
                                     width="31"></a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated">
-                                <a class="dropdown-item" href="profile"><i class="ti-user m-r-5 m-l-5"></i>
+                                <a class="dropdown-item" href="/"><i class="ti-user m-r-5 m-l-5"></i>
                                     主页</a>
                                 <a class="dropdown-item" href="{{ url_for('auth.logout') }}"><i
                                         class="ti-close m-r-5 m-l-5"></i> 退出</a>
