--- a/webapp/backend/app/templates/createactivity.html
+++ b/webapp/backend/app/templates/createactivity.html
@@ -24,7 +24,7 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item">
-                                <a href="profile">主页</a>
+                                <a href="/">主页</a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page">新建项目</li>
                         </ol>
