--- a/webapp/backend/app/templates/profile.html
+++ b/webapp/backend/app/templates/profile.html
@@ -15,7 +15,7 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item">
-                                <a href="profile">主页</a>
+                                <a href="/">主页</a>
                             </li>
                         </ol>
                     </nav>
