--- a/webapp/backend/app/templates/base.html
+++ b/webapp/backend/app/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="../static/img/myactivity/tsinghua.png">
     <title>志在清华</title>
