--- a/webapp/backend/app/templates/auth/register.html
+++ b/webapp/backend/app/templates/auth/register.html
@@ -7,7 +7,7 @@
         {{ message }}
     </div>
   {% endfor %}
-  <form class="form-signin" method="POST">
+  <form class="form-signin" method="POST" oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match." : "")'>
     <div class="jumbotron" style=background-color:rgba(219,177,247,0.336);>
 
       <div class="text-center mb-4">
@@ -38,12 +38,12 @@
 
       <div class="form-group">
         <label for="exampleInputPassword2">确认密码</label>
-        <input type="password" class="form-control" id="exampleInputPassword2" placeholder="请确认密码">
+        <input type="password" class="form-control" id="exampleInputPassword2" placeholder="请确认密码" name='password2'>
       </div>
 
-      <label for="mpanel3">验证码</label>
+      <!-- <label for="mpanel3">验证码</label>
       <div id="mpanel3">
-      </div>
+      </div> -->
 
       <button id="check-btn2" class="btn btn-lg btn-primary btn-block" type="submit">提交</button>
       <a class="btn btn-lg btn-secondary btn-block" href="login" role="button">返回</a>
@@ -56,23 +56,4 @@
 {% endblock %}
 
 {% block script %}
-  <script>
-    $('#mpanel3').codeVerify({
-      type: 2,
-      figure: 100,	//位数，仅在type=2时生效
-      arith: 0,	//算法，支持加减乘，不填为随机，仅在type=2时生效
-      width: '350px',
-      height: '50px',
-      fontSize: '30px',
-      btnId: 'check-btn2',
-      ready: function () {
-      },
-      success: function () {
-        alert('验证匹配！');
-      },
-      error: function () {
-        alert('验证码不匹配！');
-      }
-    });
-  </script>
 {% endblock %}
