--- a/webapp/backend/app/templates/createactivity.html
+++ b/webapp/backend/app/templates/createactivity.html
@@ -179,6 +179,25 @@
                                 </div>
                                 <div id="titleImageError" style="color: #a94442"></div>
                             </div>
+                            <div class="col-md-8">
+                                    <div class="fileinput fileinput-new" data-provides="fileinput" id="uploadImageDiv">
+                                        <div class="fileinput-new thumbnail" style="width: 200px; height: 150px;">
+                                            <img src="" alt="" />
+                                        </div>
+                                        <div class="fileinput-preview fileinput-exists thumbnail"
+                                            style="max-width: 200px; max-height: 150px;"></div>
+                                        <div class="row">
+                                            <span class="btn default btn-file" class='col-sm-6'>
+                                                <button class="btn btn-secondary btn-file"
+                                                    class="fileinput-new">选择图片</button>
+                                                <input type="file" name="qrcode" id="uploadImage" />
+                                            </span>
+                                        </div>
+                                        <a href="#" class="btn default fileinput-exists" data-dismiss="fileinput">移除</a>
+                                        <span>您可以上传活动群二维码便于成员加入</span>
+                                    </div>
+                                    <div id="titleImageError" style="color: #a94442"></div>
+                                </div>
                         </div>
                         <input class="btn btn-lg btn-primary btn-block" type="submit"></button>
                     </form>
