--- a/webapp/backend/app/templates/information.html
+++ b/webapp/backend/app/templates/information.html
@@ -147,7 +147,7 @@
                 </li>
             </ul>
 
-            <div class="tab-pane" id="applyMessage" role="tabpanel" aria-labelledby="applyMessag-tab">
+            <div class="tab-pane active" id="applyMessage" role="tabpanel" aria-labelledby="applyMessag-tab">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
