feat(web): add email and reset password

--- a/webapp/backend/app/templates/auth/authbase.html
+++ b/webapp/backend/app/templates/auth/authbase.html
@@ -10,10 +10,10 @@
   <title>志在清华——志愿团体登陆</title>
   <script src="https://code.jquery.com/jquery.js"></script>
   <!--script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script-->
-  <script src="../static/js/bootstrap.min.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="../static/css/bootstrap.css">
+  <link rel="stylesheet" href="/static/css/bootstrap.css">
 
 
   <style>
@@ -35,7 +35,7 @@
 
 
   <!-- Custom styles for this template -->
-  <link href="../static/css/floating-labels.css" rel="stylesheet">
+  <link href="/static/css/floating-labels.css" rel="stylesheet">
 </head>
 
 <!--body style=background-color:rgba(212,0,255,0.253);-->
