--- a/webapp/backend/app/templates/auth/password_reset_request.html
+++ b/webapp/backend/app/templates/auth/password_reset_request.html
@@ -46,19 +46,7 @@
       <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
       <label for="inputEmail">邮箱</label>
     </div>
-
-    <div class="form-label-group">
-      <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-      <label for="inputPassword">密码</label>
-    </div>
-
-    <div class="checkbox mb-3">
-      <label>
-        <input name="remember_me" type="checkbox" value="remember-me"> 记住我&emsp;
-      </label>
-      <a href="{{ url_for('auth.password_reset_request') }}">忘记密码</a>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">登陆</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">重置密码</button>
     <a class="btn btn-lg btn-secondary btn-block" href="{{ url_for('auth.register') }}" role="button">注册</a>
     <p class="mt-5 mb-3 text-muted text-center">&copy; 2019-2029</p>
   </div>
