--- a/webapp/backend/app/templates/auth/register.html
+++ b/webapp/backend/app/templates/auth/register.html
@@ -2,7 +2,7 @@
 
 {% block page%}
 {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning" style="position: absolute;left: 43%;top: 3px;">
+    <div class="alert alert-warning" style="position: absolute;top: 3px;left: 50%;width: 570px;margin-left:-285px;text-align: center;">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         {{ message }}
     </div>
