--- a/webapp/backend/app/templates/profile.html
+++ b/webapp/backend/app/templates/profile.html
@@ -1,6 +1,8 @@
 {% extends "base.html"%}
 
 {% block page %}
+<script src="../static/js/bootstrap-fileinput.js"></script>
+<link rel="stylesheet" href="../static/css/bootstrap-fileinput.css">
 <div class="page-wrapper">
     <!-- ============================================================== -->
     <!-- Bread crumb and right sidebar toggle -->
@@ -25,13 +27,31 @@
     </div>
 
     <div class="container-fluid">
+        <form method='POST' enctype="multipart/form-data">
         <div class="row">
             <!-- Column -->
             <div class="col-lg-4 col-xlg-3 col-md-5">
                 <div class="card">
                     <div class="card-body">
-                        <center class="m-t-30"> <img src="../static/img/myactivity/users/agent.jpg"
-                                class="rounded-circle" width="150" />
+                        <center class="m-t-30"> 
+                                <div class="col-md-8">
+                                        <div class="fileinput fileinput-new" data-provides="fileinput" id="uploadImageDiv">
+                                            <div class="fileinput-new thumbnail" style="width: 200px; height: 150px;">
+                                                <img src="{{team.avatar}}" alt="" class="rounded-circle" width="150"/>
+                                            </div>
+                                            <div class="fileinput-preview fileinput-exists thumbnail"
+                                                style="max-width: 200px; max-height: 150px;"></div>
+                                            <div class="row" style="justify-content:center;">
+                                                <span class="btn default btn-file" class='col-sm-6'>
+                                                    <button class="btn btn-secondary btn-file"
+                                                        class="fileinput-new">上传头像</button>
+                                                    <input type="file" name="avatar" id="uploadImage" />
+                                                </span>
+                                            </div>
+                                            <a href="#" class="btn default fileinput-exists" data-dismiss="fileinput">移除</a>
+                                        </div>
+                                        <div id="titleImageError" style="color: #a94442"></div>
+                                    </div>
                             <h4 class="card-title m-t-10">{{team.teamName}}</h4>
                             <div class="row text-center justify-content-md-center">
                                 <div class="col-4"><a href="javascript:void(0)" class="link"><i
@@ -65,7 +85,7 @@
             <div class="col-lg-8 col-xlg-9 col-md-7">
                 <div class="card">
                     <div class="card-body">
-                        <form class="form-horizontal form-material" method='POST'>
+                        <div class="form-horizontal form-material">
                             <div class="form-group">
                                 <label class="col-md-12">团队名称</label>
                                 <div class="col-md-12">
@@ -106,12 +126,13 @@
                                     <input type="submit" class="btn btn-success" value="更新信息"></button>
                                 </div>
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Column -->
         </div>
+        </form>
     </div>
 
 </div>
